--- a/ui/index.html
+++ b/ui/index.html
@@ -10,57 +10,37 @@ body {
     margin: 0;
     padding: 0;
 }
-#toolbar {
+.tab-strip {
     display: flex;
-    padding: 8px;
-    background-color: #f0f0f0;
+    background-color: #eee;
+    padding: 4px;
 }
-#url {
-    flex: 1;
-    margin-right: 8px;
+.tab {
+    padding: 4px 8px;
+    border: 1px solid #ccc;
+    margin-right: 2px;
+    background: #ddd;
+    cursor: pointer;
+}
+.tab.active {
+    background: #fff;
+    border-bottom: none;
+}
+.toolbar {
+    padding: 4px;
+    background: #f0f0f0;
 }
 iframe {
     width: 100%;
-    height: calc(100vh - 40px);
+    height: calc(100vh - 80px);
     border: none;
 }
 </style>
 </head>
 <body>
-<div id="toolbar">
-    <input id="url" type="text" placeholder="Enter URL" />
-    <button id="go">Go</button>
-</div>
-<iframe id="view" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
-<script>
-const input = document.getElementById('url');
-const button = document.getElementById('go');
-const view = document.getElementById('view');
-
-function load(url) {
-    if (!url.startsWith('http')) {
-        url = 'http://' + url;
-    }
-    view.src = url;
-}
-
-button.addEventListener('click', () => load(input.value));
-input.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter') load(input.value);
-});
-
-// Selection highlighting -> Python
-view.addEventListener('load', () => {
-    view.contentWindow.document.addEventListener('selectionchange', () => {
-        const sel = view.contentWindow.getSelection();
-        if (sel && sel.toString().trim() !== '') {
-            const text = sel.toString();
-            if (window.pywebview) {
-                window.pywebview.api.on_selection(text);
-            }
-        }
-    });
-});
-</script>
+<div id="root"></div>
+<script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
