--- a/ui/index.html
+++ b/ui/index.html
@@ -5,62 +5,122 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>VoiceAgent Browser</title>
 <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-#toolbar {
-    display: flex;
-    padding: 8px;
-    background-color: #f0f0f0;
-}
-#url {
-    flex: 1;
-    margin-right: 8px;
-}
-iframe {
-    width: 100%;
-    height: calc(100vh - 40px);
-    border: none;
-}
+body { font-family: Arial, sans-serif; margin:0; padding:0; }
+.tab-strip { display:flex; background:#eee; padding:4px; }
+.tab-strip div { padding:4px 8px; margin-right:4px; background:#ccc; cursor:pointer; user-select:none; }
+.tab-strip div.active { background:#fff; border-bottom:2px solid blue; }
+iframe { width:100%; height:calc(100vh - 80px); border:none; }
+#toolbar { display:flex; padding:4px; background:#f0f0f0; }
+#toolbar input { flex:1; margin-right:4px; }
 </style>
+<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script crossorigin src="https://unpkg.com/babel-standalone@7/babel.min.js"></script>
 </head>
 <body>
-<div id="toolbar">
-    <input id="url" type="text" placeholder="Enter URL" />
-    <button id="go">Go</button>
-</div>
-<iframe id="view" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
-<script>
-const input = document.getElementById('url');
-const button = document.getElementById('go');
-const view = document.getElementById('view');
+<div id="root"></div>
+<script type="text/babel">
+const {useState, useEffect, useRef} = React;
 
-function load(url) {
-    if (!url.startsWith('http')) {
-        url = 'http://' + url;
+function App() {
+  const params = new URLSearchParams(window.location.search);
+  const firstUrl = params.get('url') || 'https://example.com';
+  const [tabs, setTabs] = useState([{id:1, url:firstUrl, title:firstUrl}]);
+  const [activeId, setActiveId] = useState(1);
+  const nextId = useRef(2);
+  const urlInput = useRef(null);
+  const iframeRef = useRef(null);
+
+  useEffect(() => {
+    const frame = iframeRef.current;
+    if(!frame) return;
+    const loadHandler = () => {
+      frame.contentWindow.document.addEventListener('selectionchange', () => {
+        const sel = frame.contentWindow.getSelection();
+        if(sel && sel.toString().trim() !== '') {
+          window.pywebview?.api.on_selection(sel.toString());
+        }
+      });
+    };
+    frame.addEventListener('load', loadHandler);
+    return () => frame.removeEventListener('load', loadHandler);
+  }, [activeId]);
+
+  const addTab = () => {
+    const url = prompt('Enter URL');
+    if(!url) return;
+    const id = nextId.current++;
+    setTabs([...tabs, {id, url, title:url}]);
+    setActiveId(id);
+  };
+
+  const updateActiveUrl = () => {
+    const url = urlInput.current.value;
+    setTabs(tabs.map(t => t.id===activeId ? {...t, url, title:url} : t));
+  };
+
+  const onTabDragStart = (e,id) => {
+    e.dataTransfer.setData('tabId', String(id));
+    e.dataTransfer.effectAllowed = 'move';
+  };
+
+  const onTabDrop = (e,targetId) => {
+    e.preventDefault();
+    const sourceId = Number(e.dataTransfer.getData('tabId'));
+    if(sourceId === targetId) return;
+    const srcIdx = tabs.findIndex(t=>t.id===sourceId);
+    const tgtIdx = tabs.findIndex(t=>t.id===targetId);
+    const newTabs = [...tabs];
+    const [moved] = newTabs.splice(srcIdx,1);
+    newTabs.splice(tgtIdx,0,moved);
+    setTabs(newTabs);
+  };
+
+  const onDragEnd = (e,id) => {
+    const stripRect = document.getElementById('tabstrip').getBoundingClientRect();
+    if(e.clientY < stripRect.top || e.clientY > stripRect.bottom) {
+      detachTab(id);
     }
-    view.src = url;
+  };
+
+  const detachTab = async (id) => {
+    const tab = tabs.find(t=>t.id===id);
+    if(!tab) return;
+    await window.pywebview?.api.popout_tab(tab.url, tab.title);
+    setTabs(tabs.filter(t=>t.id!==id));
+    if(activeId===id && tabs.length>1) setActiveId(tabs[0].id);
+  };
+
+  const activeTab = tabs.find(t=>t.id===activeId);
+
+  return (
+    <div>
+      <div id="tabstrip" className="tab-strip" onDragOver={e=>e.preventDefault()}>
+        {tabs.map(tab => (
+          <div key={tab.id}
+            draggable
+            onDragStart={e=>onTabDragStart(e,tab.id)}
+            onDragEnd={e=>onDragEnd(e,tab.id)}
+            onDrop={e=>onTabDrop(e,tab.id)}
+            className={tab.id===activeId? 'active':''}
+            onClick={()=>setActiveId(tab.id)}>
+            {tab.title}
+          </div>
+        ))}
+        <button onClick={addTab}>+</button>
+      </div>
+      <div id="toolbar">
+        <input ref={urlInput} defaultValue={activeTab?.url} />
+        <button onClick={updateActiveUrl}>Go</button>
+      </div>
+      {activeTab && (
+        <iframe ref={iframeRef} src={activeTab.url} sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
+      )}
+    </div>
+  );
 }
 
-button.addEventListener('click', () => load(input.value));
-input.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter') load(input.value);
-});
-
-// Selection highlighting -> Python
-view.addEventListener('load', () => {
-    view.contentWindow.document.addEventListener('selectionchange', () => {
-        const sel = view.contentWindow.getSelection();
-        if (sel && sel.toString().trim() !== '') {
-            const text = sel.toString();
-            if (window.pywebview) {
-                window.pywebview.api.on_selection(text);
-            }
-        }
-    });
-});
+ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
